@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-25T08:23:29Z",
+  "count" : 7,
+  "count_minmax" : [ 7, 7 ],
+  "count_prev_day_inc" : 7,
+  "count_prev_day_dec" : 0,
+  "uniques" : 4,
+  "uniques_minmax" : [ 4, 4 ],
+  "uniques_prev_day_inc" : 4,
+  "uniques_prev_day_dec" : 0
+}
