@@ -1,6 +1,6 @@
 {
-  "count": 24,
-  "uniques": 12,
+  "count": 31,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-04-11T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2022-04-21T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-25T00:00:00Z",
+      "count": 7,
+      "uniques": 4
     }
   ]
 }
