@@ -1,3 +1,9 @@
+2022-04-25T08:23:29Z:
+* notice: last 14d: all unq: 31 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 114 78 / 138 94
+* notice: next accum: outdated-all outdated-unq / all unq: 114 78 / 145 98
+* notice: prev json diff // prev day diff: unq all: +4 +7 / -0 -0 // +4 +7 / -0 -0
+
 2022-04-24T08:20:31Z:
 * notice: last 14d: all unq: 24 12
 * notice: prev accum: outdated-all outdated-unq / all unq: 111 76 / 138 94
